testing a revised file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <script src="index.js" type="module"></script>
 
-    <title>Alfee Food Fun</title>
+    <title>Alfee Food Fun for all the family!</title>
   </head>
   <body>
     <nav id="navbar">
