--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav id="navbar">
-      <a href="#" class="nav-brand">My Nutrition</a>
+      <a href="#" class="nav-brand">My Nutrition - PURPLE TREES</a>
     </nav>
 
     <div class="container" id="main">
