--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="snackbar.css" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <script src="index.js" type="module"></script>
 
@@ -75,5 +76,6 @@
       </div>
       <ul id="food-list"></ul>
     </div>
+    <div id="snackbar">Some text some message..</div>
   </body>
 </html>
